kubernetes/main/apps/observability/kube-prometheus-stack/app/alertmanager-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress
  namespace: observability
spec:
  entryPoints:
    - internalsecure
  routes:
    - match: Host(`alertmanager.internal.jacob-williams.me`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 8080
          scheme: http
          passHostHeader: true
